# harp.device.cuttlefish

./: .gitmodules  README.md  device.yml
firmware/: CMakeLists.txt
firmware/inc/: config.h  core1_main.h  cuttlefish_app.h  edge_event_queue.h  pwm_scheduler.h  pwm_settings.h  pwm_task.h  schedule_ctrl_queues.h
firmware/src/: core1_main.cpp  cuttlefish_app.cpp  main.cpp  pwm_scheduler.cpp  pwm_task.cpp
firmware/tests/schedule/: CMakeLists.txt
firmware/tests/schedule/src/: main.cpp
hardware/cuttlefish/: bus_selection.kicad_sch  cuttlefish.kicad_pcb  cuttlefish.kicad_pro  cuttlefish.kicad_sch  harp_core_rp2040_w_isolated_usb.kicad_sch  octal_ttl_io.kicad_sch  power_supplies.kicad_sch
software/bonsai/Generators/: Generators.csproj
software/bonsai/Interface/: AllenNeuralDynamics.CuttlefishCamTrigger.sln
software/bonsai/Interface/AllenNeuralDynamics.Cuttlefish/: AllenNeuralDynamics.Cuttlefish.csproj  AsyncDevice.Generated.cs  ConfigurePwm.cs  Device.Generated.cs  HelperMethods.cs
software/bonsai/Interface/AllenNeuralDynamics.CuttlefishCamTrigger/: AllenNeuralDynamics.CuttlefishCamTrigger.csproj  AsyncDevice.Generated.cs  Device.Generated.cs
software/bonsai/Interface/AllenNeuralDynamics.CuttlefishCamTrigger/Properties/: AssemblyInfo.cs
software/pyharp/: app_registers.py  restart_waveform.py  send_many_waveforms.py  send_waveform.py  set_interrupts.py  toggle_ports.py  update_waveform.py  update_waveform_error.py  wait_for_interrupts.py
